--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/src/Services/Catalog/Catalog.API/.idea/.idea.Catalog.API.dir/.idea
+/src/.idea/.idea.aspnetrun-microservices/.idea
